--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "bmd-teranex",
 	"version": "1.0.2",
 	"api_version": "1.0.0",
-	"keywords": [ "Standards Converter", "Image Processing" ],
+	"keywords": [ "Image Processing" ],
 	"manufacturer": "Blackmagic Design",
 	"product": "Teranex",
 	"shortname": "teranex",
