--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
 	"name": "bmd-teranex",
-	"version": "1.0.4",
+	"version": "1.0.5",
 	"api_version": "1.0.0",
-	"keywords": [ "Image Processing" ],
+	"keywords": [
+		"Image Processing"
+	],
 	"manufacturer": "Blackmagic Design",
 	"product": "Teranex",
 	"shortname": "teranex",
