--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "bmd-teranex",
-	"version": "1.0.6",
+	"version": "1.0.8",
 	"api_version": "1.0.0",
 	"keywords": [
 		"Image Processing"
@@ -18,6 +18,9 @@
 		"url": "git+https://github.com/bitfocus/companion-module-bmd-teranex.git"
 	},
 	"author": "Håkon Nessjøen <haakon@bitfocus.io>",
+	"contributors": [
+		"Joseph Adams <josephdadams@gmail.com>"
+	],
 	"license": "MIT",
 	"bugs": {
 		"url": "https://github.com/bitfocus/companion-module-bmd-teranex/issues"
