--- a/companion/manifest.json
+++ b/companion/manifest.json
@@ -25,10 +25,6 @@
 		"entrypoint": "../index.js"
 	},
 	"manufacturer": "Blackmagic Design",
-	"products": [
-		"Teranex"
-	],
-	"keywords": [
-		"Image Processing"
-	]
+	"products": ["Teranex"],
+	"keywords": ["Image Processing"]
 }
