--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "2.0.0",
 	"main": "index.js",
 	"scripts": {
+		"format": "prettier -w .",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"repository": {
@@ -15,5 +16,6 @@
 	},
 	"devDependencies": {
 		"@companion-module/tools": "^1.4.0"
-	}
+	},
+	"prettier": "@companion-module/tools/.prettierrc.json"
 }
