--- a/companion/manifest.json
+++ b/companion/manifest.json
@@ -1,4 +1,5 @@
 {
+	"$schema": "../node_modules/@companion-module/base/assets/manifest.schema.json",
 	"id": "bmd-teranex",
 	"name": "bmd-teranex",
 	"shortname": "teranex",
@@ -26,5 +27,14 @@
 	},
 	"manufacturer": "Blackmagic Design",
 	"products": ["Teranex"],
-	"keywords": ["Image Processing"]
+	"keywords": ["Image Processing"],
+	"bonjourQueries": {
+		"bonjourHost": {
+			"type": "blackmagic",
+			"protocol": "tcp",
+			"txt": {
+				"class": "Teranex"
+			}
+		}
+	}
 }
