--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "bmd-teranex",
-	"version": "2.2.1",
+	"version": "2.3.0",
 	"main": "index.js",
 	"scripts": {
 		"format": "prettier -w .",
@@ -15,7 +15,8 @@
 		"@companion-module/base": "~1.4.3"
 	},
 	"devDependencies": {
-		"@companion-module/tools": "^1.4.0"
+		"@companion-module/tools": "^1.4.0",
+		"prettier": "^3.3.3"
 	},
 	"prettier": "@companion-module/tools/.prettierrc.json"
 }
